testsuite/tests/typing-objects-bugs/pr7284_bad.compilers.reference
File "pr7284_bad.ml", line 30, characters 29-61:
30 |   let f : X.v1 wit -> unit = function V1 s -> print_endline s
                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error (warning 8 [partial-match]): this pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
V2 _
